# constitute-nvr

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  config.example.json  project.json
.github/workflows/: release.yml
docs/: CAMERA_COMPAT.md  DRIVER_CONTRACT.md  OPERATIONS.md  PROTOCOL.md  ROADMAP.md
docs/issues/: nvr-history-incomplete.md
scripts/: reolink-native-ptz.cjs
scripts/linux/: bootstrap-camera-network.sh  harden-camera-interface.sh  install-latest.sh  install-wizard.sh  package.sh  self-update-release.sh  self-update.sh
src/: api.rs  camera.rs  config.rs  crypto.rs  drivers.rs  hosted_registry.rs  live.rs  logging_surface.rs  main.rs  nostr.rs  onvif.rs  reolink.rs  reolink_cgi.rs  reolink_proto.rs  storage.rs  storage_proof.rs  swarm.rs  update.rs  util.rs  xm.rs
src/camera_device/: apply.rs  control.rs  discovery.rs  identification.rs  inventory.rs  mod.rs  mount.rs  reconcile.rs  registry.rs  types.rs
src/camera_device/drivers/: mod.rs
src/camera_device/drivers/generic_onvif_rtsp/: driver.rs  identification.rs  mod.rs
src/camera_device/drivers/reolink/: cgi.rs  driver.rs  identification.rs  mod.rs  proto.rs
src/camera_device/drivers/xm_40e/: driver.rs  identification.rs
src/camera_device/protocol/: onvif.rs
src/live/: mod.rs  preview.rs  session.rs  webrtc.rs
src/media/: ffmpeg.rs  mod.rs  planner.rs  transcode.rs  types.rs
src/media_projection/: mod.rs
src/recording/: mod.rs  runtime.rs  segments.rs  worker.rs
