[package]
name = "constitute-nvr"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8"
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
cfb-mode = "0.8"
chacha20poly1305 = { version = "0.10", features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"] }
constitute-protocol = { git = "https://github.com/Aux0x7F/constitute-protocol.git", rev = "11eb917d965712d5e2571f2effa5730c7102f317" }
des = "0.8"
futures-util = "0.3"
hex = "0.4"
hkdf = "0.12"
hmac = "0.12"
md-5 = "0.10"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
roxmltree = "0.20"
rtp = "0.8"
secp256k1 = { version = "0.29", features = ["rand", "global-context"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
tokio = { version = "1.44", features = ["full"] }
tokio-tungstenite = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
util = { package = "webrtc-util", version = "0.7" }
uuid = { version = "1", features = ["v4"] }
webrtc = "0.8"
walkdir = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
